--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,23 @@
+<br />
+<button class="btn btn-primary">Add Recipe</button>
+<hr />
+<div class="row">
+  <div class="col-md-12">
+    <div class="card" *ngFor="let recipe of recipes">
+      <!-- <img
+        [src]="recipe.imagePath"
+        class="card-img-top"
+        alt="{{ recipe.name }}"
+        height="100px"
+      /> -->
+      <div class="card-body">
+        <h5 class="card-title">{{ recipe.name }}</h5>
+        <p class="card-text">
+          {{ recipe.description }}
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <app-recipe-item> </app-recipe-item>
