Recipe detail UI

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,25 @@
-<p>recipe-detail works!</p>
+<br />
+<div class="row">
+  <div class="col-md-12">
+    <h1>Recipe Name</h1>
+  </div>
+  <div class="col-md-12">
+    <div class="dropdown">
+      <button
+        class="btn btn-info dropdown-toggle"
+        type="button"
+        data-toggle="dropdown"
+        aria-expanded="false"
+      >
+        Manage
+      </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Add to Shopping List</a>
+        <a class="dropdown-item" href="#">Edit Recipe</a>
+        <a class="dropdown-item" href="#">Delete Recipe</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-12">Description</div>
+  <div class="col-md-12">Ingredients</div>
+</div>
