--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,1 +1,28 @@
-<p>shopping-edit works!</p>
+<div class="row">
+  <div class="col-md-12">
+    <form>
+      <div class="row">
+        <div class="col-md-5">
+          <label for="name">Name</label>
+          <input type="text" id="name" class="form-control" />
+        </div>
+        <div class="col-md-2">
+          <label for="amount">Amount</label>
+          <input type="number" id="amount" class="form-control" />
+        </div>
+      </div>
+      <br />
+      <div class="row">
+        <div class="col-md-12">
+          <button type="submit" class="btn btn-success" type="submit">
+            Add
+          </button>
+          <button type="submit" class="btn btn-danger" type="submit">
+            Delete
+          </button>
+          <button type="submit" class="btn btn-info" type="submit">Edit</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
