--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,17 @@
 <div class="row">
-  <div class="col-xs-10">
+  <div class="col-md-10">
     <app-shopping-edit></app-shopping-edit>
     <hr />
-    <p>The List</p>
+    <div class="card">
+      <div class="card-header">Ingredient List</div>
+      <ul
+        class="list-group list-group-flush"
+        *ngFor="let ingredient of ingredients"
+      >
+        <li class="list-group-item">
+          {{ ingredient.name }} ({{ ingredient.amount }})
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
