--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,12 +14,14 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#"
+        <a class="nav-link" href="#" (click)="onSubmit('recipes')"
           >Recipes <span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Shopping List</a>
+        <a class="nav-link" href="#" (click)="onSubmit('shopping-list')"
+          >Shopping List</a
+        >
       </li>
     </ul>
   </div>
