--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -3,21 +3,8 @@
 <hr />
 <div class="row">
   <div class="col-md-12">
-    <div class="card" *ngFor="let recipe of recipes">
-      <!-- <img
-        [src]="recipe.imagePath"
-        class="card-img-top"
-        alt="{{ recipe.name }}"
-        height="100px"
-      /> -->
-      <div class="card-body">
-        <h5 class="card-title">{{ recipe.name }}</h5>
-        <p class="card-text">
-          {{ recipe.description }}
-        </p>
-      </div>
+    <div class="card" *ngFor="let recipeEl of recipes">
+      <app-recipe-item [recipe]="recipeEl"></app-recipe-item>
     </div>
   </div>
 </div>
-
-<app-recipe-item> </app-recipe-item>
