--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -4,7 +4,10 @@
 <div class="row">
   <div class="col-md-12">
     <div class="card" *ngFor="let recipeEl of recipes">
-      <app-recipe-item [recipe]="recipeEl"></app-recipe-item>
+      <app-recipe-item
+        [recipe]="recipeEl"
+        (selectedRecipe)="onRecipeSelected(recipeEl)"
+      ></app-recipe-item>
     </div>
   </div>
 </div>
