--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,13 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list
+      (recipeSelected)="selectedRecipe($event)"
+    ></app-recipe-list>
   </div>
-  <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+  <div class="col-md-7" *ngIf="recipe; else noRecipeSelected">
+    <app-recipe-detail [recipe]="recipe"></app-recipe-detail>
   </div>
+  <ng-template #noRecipeSelected>
+    <p>No Recipe Selected!</p>
+  </ng-template>
 </div>
