--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,23 +4,21 @@
       <div class="row">
         <div class="col-md-5">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" />
+          <input type="text" id="name" class="form-control" #nameInput />
         </div>
         <div class="col-md-2">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control" />
+          <input type="number" id="amount" class="form-control" #amountInput />
         </div>
       </div>
       <br />
       <div class="row">
         <div class="col-md-12">
-          <button type="submit" class="btn btn-success" type="submit">
+          <button class="btn btn-success" (click)="onAddItem()" type="submit">
             Add
           </button>
-          <button type="submit" class="btn btn-danger" type="submit">
-            Delete
-          </button>
-          <button type="submit" class="btn btn-info" type="submit">Edit</button>
+          <button class="btn btn-danger">Delete</button>
+          <button class="btn btn-info">Edit</button>
         </div>
       </div>
     </form>
