Dropdown custom directive

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -9,7 +9,8 @@
         class="btn btn-info dropdown-toggle"
         type="button"
         data-toggle="dropdown"
-        aria-expanded="false"
+        aria-expanded="true"
+        appDropdown
       >
         Manage
       </button>
