--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,8 +1,6 @@
 <div class="row">
   <div class="col-md-10">
-    <app-shopping-edit
-      (ingredientAdded)="onIngredientAdded($event)"
-    ></app-shopping-edit>
+    <app-shopping-edit></app-shopping-edit>
     <hr />
     <div class="card">
       <div class="card-header">Ingredient List</div>
