--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,7 +15,9 @@
         Manage
       </button>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Add to Shopping List</a>
+        <a class="dropdown-item" href="#" (click)="onAddToShopping()"
+          >Add to Shopping List</a
+        >
         <a class="dropdown-item" href="#">Edit Recipe</a>
         <a class="dropdown-item" href="#">Delete Recipe</a>
       </div>
@@ -30,5 +32,11 @@
     <p>{{ recipe.description }}</p>
   </div>
 
-  <div class="col-md-12">Ingredients</div>
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ing of recipe.ingredients">
+        {{ ing.name }} - {{ ing.amount }}
+      </li>
+    </ul>
+  </div>
 </div>
