Routing Part 1, App URL Routing

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,11 +15,11 @@
         Manage
       </button>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#" (click)="onAddToShopping()"
+        <a class="dropdown-item" (click)="onAddToShopping()"
           >Add to Shopping List</a
         >
-        <a class="dropdown-item" href="#">Edit Recipe</a>
-        <a class="dropdown-item" href="#">Delete Recipe</a>
+        <a class="dropdown-item">Edit Recipe</a>
+        <a class="dropdown-item">Delete Recipe</a>
       </div>
     </div>
   </div>
