--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,13 +13,16 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#" (click)="onSubmit('recipes')"
-          >Recipes <span class="sr-only">(current)</span></a
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/recipes"
+          >Recipes</a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" (click)="onSubmit('shopping-list')"
+        <a
+          class="nav-link"
+          routerLinkActive="active"
+          routerLink="/shopping-list"
           >Shopping List</a
         >
       </li>
@@ -38,8 +41,8 @@
           Manage
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Save Data</a>
-          <a class="dropdown-item" href="#">Fetch Data</a>
+          <a class="dropdown-item">Save Data</a>
+          <a class="dropdown-item">Fetch Data</a>
         </div>
       </li>
     </ul>
