--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -2,10 +2,7 @@
   <div class="col-md-5">
     <app-recipe-list></app-recipe-list>
   </div>
-  <div class="col-md-7" *ngIf="recipe; else noRecipeSelected">
-    <app-recipe-detail [recipe]="recipe"></app-recipe-detail>
+  <div class="col-md-7">
+    <router-outlet></router-outlet>
   </div>
-  <ng-template #noRecipeSelected>
-    <p>No Recipe Selected!</p>
-  </ng-template>
 </div>
