--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<div class="card-body" (click)="onItemClick()" style="cursor: pointer">
+<div class="card-body" style="cursor: pointer" [routerLink]="[index]">
   <div class="row">
     <div class="col-8">
       <h5 class="card-title">{{ recipe.rname }}</h5>
