--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -18,7 +18,7 @@
         <a class="dropdown-item" (click)="onAddToShopping()"
           >Add to Shopping List</a
         >
-        <a class="dropdown-item">Edit Recipe</a>
+        <a class="dropdown-item" (click)="onEditRecipe()">Edit Recipe</a>
         <a class="dropdown-item">Delete Recipe</a>
       </div>
     </div>
