--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,5 +1,5 @@
 <br />
-<button class="btn btn-primary">Add Recipe</button>
+<button class="btn btn-primary" (click)="onNewRecipe()">Add Recipe</button>
 <hr />
 <div class="row">
   <div class="col-md-12">
