Forms and Validation - Adding Item, Editing Item

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -6,7 +6,8 @@
       <div class="card-header">Ingredient List</div>
       <ul
         class="list-group list-group-flush"
-        *ngFor="let ingredient of ingredients"
+        *ngFor="let ingredient of ingredients; let i = index"
+        (click)="onEditItem(i)"
       >
         <li class="list-group-item">
           {{ ingredient.name }} ({{ ingredient.amount }})
