--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -32,7 +32,9 @@
           <button class="btn btn-success" type="submit" [disabled]="!f.valid">
             {{ editMode ? "Update" : "Add" }}
           </button>
-          <button class="btn btn-danger">Delete</button>
+          <button class="btn btn-danger" (click)="onDelete()" *ngIf="editMode">
+            Delete
+          </button>
           <button class="btn btn-info">Edit</button>
         </div>
       </div>
